Improve language manager and move Settings page to language manager

--- a/src/main/resources/translations/Main.json
+++ b/src/main/resources/translations/Main.json
@@ -6,5 +6,9 @@
   "Main.btn_settings": {
     "en": "Settings",
     "fr": "Paramètres"
+  },
+  "Main.btn_leave": {
+    "en": "Leave",
+    "fr": "Quitter"
   }
 }
